--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "prcalendario",
   "version": "0.1.0",
+  "homepage": "https://LisboaAnt.github.io/React-Big-Calendar-Tutorial",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -19,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
